--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ title: Index
 		<div>
 			<ul>
   				{% for post in site.posts %}
-    				<li><a href="{{ post.url }}">{{ post.title }}</a></li>
+    				<li><a href="{{ post.url }}">{{ post.title }}</a><p>{{ post.content | strip_html | truncate:200 }}</p>
+				</li>
   				{% endfor %}
 			</ul>
 		</div>
