--- a/index.html
+++ b/index.html
@@ -3,16 +3,26 @@ layout: default
 title: Index
 ---
 
-		<div class="blurb">
-			<h1>Hi there, I'm Hank Quinlan!</h1>
-			<p>I'm best known as the horrible cop from <em>A Touch of Evil</em>. Don't trust me. <a href="/about">Read more about my life...</a></p>
-		</div> 
+<div class="blurb">
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis 
+    parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat
+    massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, 
+    venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. 
+    Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus 
+    in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. 
+    Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.
+        <em>Etiam rhoncus</em>. <i>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing 
+        sem neque sed ipsum</i>. 
+    <a href="/about">Read more about my life...</a></p>
+</div>
 
-		<div>
-			<ul>
-  				{% for post in site.posts %}
-    				<li><a href="{{ post.url }}">{{ post.title }}</a><p>{{ post.content | strip_html | truncate:200 }}</p>
-				</li>
-  				{% endfor %}
-			</ul>
-		</div>
+<div>
+    <ul>
+        {% for post in site.posts %}
+        <li>
+            <a href="{{ post.url }}">{{ post.title }}</a><p>{{ post.content | strip_html | truncate:200 }}</p>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
