--- a/tags.html
+++ b/tags.html
@@ -25,10 +25,10 @@ description: 海纳百川，有容乃大
             <!-- 标签云 -->
 			<div id='tag_cloud' class="tags">
 				{% for tag in site.tags %}
-				<a href="#{{ tag[0] }}" title="{{ tag[0] }}" rel="{{ tag[1].size }}">{{ tag[0] }}</a>
+				<a class="tag" href="#{{ tag[0] }}" title="{{ tag[0] }}" rel="{{ tag[1].size }}">{{ tag[0] }}</a>
 				{% endfor %}
 			</div>
-
+			<hr style="margin:50px;">
             <!--<blockquote class="tag-comments">
                 标签命名规范：
                     <li>行业观察、职位、公司优先使用中文</li>
