--- a/tags.html
+++ b/tags.html
@@ -23,7 +23,7 @@ description: 海纳百川，有容乃大
 	<div class="row">
 		<div>
             <!-- 标签云 -->
-			<div id='tag_cloud' class="tags">
+			<div style="margin:50px;text-align:center;" id='tag_cloud' class="tags">
 				{% for tag in site.tags %}
 				<a class="tag" href="#{{ tag[0] }}" title="{{ tag[0] }}" rel="{{ tag[1].size }}">{{ tag[0] }}</a>
 				{% endfor %}
