--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@ title: Index
 </div>
 
 <div>
+    <p>Latest Trend:</p>
+    <object width="100%" height="230" data="trend.html" class="trend-object"></object>
+</div>
+
+<div>
     <p>My Blogs:</p>
     <ul>
         {% for post in site.posts %}
