--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@ title: Index
 
 <div>
     <p>Latest Trend:</p>
-    <object width="100%" height="230" data="trend.html" class="trend-object"></object>
+    <iframe marginwidth=0 marginheight=0 width=100% height=180 src="trend.html" frameborder=0 class="trend-object"></iframe>
+    <a href="trend.html">Read more...</a></p>
 </div>
 
 <div>
