--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ title: Index
 
 <div>
     <p>Latest Trend:</p>
-    <iframe marginwidth=0 marginheight=0 width=100% height=180 src="trend.html" frameborder=0 class="trend-object"></iframe>
-    <a href="trend.html">Read more...</a></p>
+    <object data="trend.html" type="text/x-scriptlet" height="180" width="100%"></object>
+    <a href="trend.html">Read More...</a></p>
 </div>
 
 <div>
