--- a/trend.html
+++ b/trend.html
@@ -15,7 +15,7 @@ author:     GreatBaron
     <meta charset="utf-8" />
     <title>Trends</title>
 </head>
-<body>
+<body scroll="no">
     <div class="trend-body">
         <table class="trend-content">
             <tr><td><div>
