--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ title: Index
 
 <div>
     <p>Latest Trend:</p>
-    <object data="trend.html" type="text/x-scriptlet" height="180" width="100%" ></object>
-    <a href="trend.html">更多动态</a></p>
+    <object data="trend.html" type="text/x-scriptlet" height="180" width="100%" class="trend-object"></object>
+    <a href="trend.html">更多动态 &rArr </a></p>
 </div>
 
 <div>
