--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ title: Index
 <div>
     <p>Latest Trend:</p>
     <object data="trend.html" type="text/x-scriptlet" height="180" width="100%" class="trend-object"></object>
+    <span class="trend-abstract">{{ trend.content | strip_html | truncate:400 }}
     <a href="trend.html">更多动态 &rArr </a></p>
 </div>
 
