--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@ title: Index
 
 <div>
     <p>Latest Trend:</p>
-    <object data="trend.html" type="text/x-scriptlet" height="180" width="100%" class="trend-object"></object>
-    <span class="trend-abstract">{{ trend.content | strip_html | truncate:400 }}</span>
+    <span class="trend-abstract">{{ "trend.html" | strip_html | truncate:400 }}</span>
     <a href="trend.html">更多动态→</a></p>
 </div>
 
