--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Index
 
 <div>
     <p>Latest Trend:</p>
-    <span class="trend-abstract">{{ "trend.html" | strip_html | truncate:400 }}</span>
+    <span class="trend-abstract">{{ {{site.url}}/trend.html | strip_html | truncate:400 }}</span>
     <a href="trend.html">更多动态→</a></p>
 </div>
 
