--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@ title: Index
 
 <div>
     <p>Latest Trend:</p>
-    <span class="trend-abstract">{{ {{site.url}}/trend.html | strip_html | truncate:400 }}</span>
+    <% assign page = trend.html %}
+    <% if page = trend.html %>
+    <span class="trend-abstract">{{ page.content | strip_html | truncate:400 }}</span>
+    <% endif %>
     <a href="trend.html">更多动态→</a></p>
 </div>
 
