--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Index
 
 <div>
     <p>Latest Trend:</p>
-    <embed type="plain" height="200" width="100%" src="trend.html" class="trend-abstract" />
+    <embed type="text/html" height="200" width="100%" src="trend.html" class="trend-abstract" />
     <a href="trend.html">更多动态→</a></p>
 </div>
 
