--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@ title: Index
     <a href="/about">Read more about my life...</a></p>
 </div>
 
-<div>
+<div  scroll="no">
     <p>Latest Trend:</p>
     <embed type="text/html" height="200" width="100%" src="trend.html" class="trend-abstract" />
-    <a href="trend.html">更多动态→</a></p>
+    <a href="trend.html">更多动态...</a></p>
 </div>
 
 <div>
