--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ title: Index
 
 <div>
     <p>Latest Trend:</p>
+    <span>{{ site.my_trends.content }}</span>
     <a href="trend.html">更多动态</a></p>
 </div>
 
