--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@ title: Index
 
 <div>
     <p>Latest Trend:</p>
-    <span>{{ site.my_trends.content }}</span>
+    {% for my_trends in site.my_trends %}
+    <span>{{ my_trends.content }}</span>
+    {% endfor %}
     <a href="trend.html">更多动态</a></p>
 </div>
 
