--- a/_my_trends/trend.html
+++ b/_my_trends/trend.html
@@ -1,9 +1,10 @@
 ---
 layout:     nonav
+collection: my_trends
 title:      最新动态
 subtitle:   Latest Trend
 date:       9999-12-31
-permalink:  /trend.html
+permalink:  my_trends/trend.html
 author:     GreatBaron
 ---
 
