--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@ title: Index
     <a href="/about">Read more about my life...</a></p>
 </div>
 
-<div>
+<div class="trend-shortcut">
     <p>Latest Trend:</p>
     {% for my_trends in site.my_trends %}
-    <span>{{ my_trends.content }}</span>
+    <span>{{ my_trends.content | strip_html | truncate:140}}</span>
     {% endfor %}
-    <a href="trend.html">更多动态</a></p>
+    <a href="trend.html">更多动态...</a></p>
 </div>
 
 <div>
