--- a/_my_trends/trend.html
+++ b/_my_trends/trend.html
@@ -4,7 +4,7 @@ collection: my_trends
 title:      最新动态
 subtitle:   Latest Trend
 date:       9999-12-31
-permalink:  my_trends/trend.html
+permalink:  /trend.html
 author:     GreatBaron
 ---
 
@@ -14,7 +14,6 @@ author:     GreatBaron
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Trends</title>
 </head>
 <body scroll="no">
     <div class="trend-body">
@@ -22,7 +21,13 @@ author:     GreatBaron
             <tr><td><div>
                 <span class="trend-time">时间</span>
                 <span class="trend-title">动态抬头</span>
-                <div class="trend-core">动态内容</div>
+                <div class="trend-core">动态内容Nulla in ipsum. Praesent eros nulla, 
+                    congue vitae, euismod ut, commodo
+a, wisi. Pellentesque habitant morbi tristique senectus et netus et malesuada
+fames ac turpis egestas. Aenean nonummy magna non leo. Sed felis erat,
+ullamcorper in, dictum non, ultricies ut, lectus. Proin vel arcu a odio lobortis
+euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
+posuere cubilia Curae; Proin ut est.</div>
                 </div></td></tr>
             <tr><td></td></tr>
             <tr><td></td></tr>
