--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
-title: Index
+title: INDEX
+description: 伯伦大人 | GreatBaron
 ---
 
 <div class="blurb">
@@ -18,7 +19,7 @@ title: Index
     {% for my_trends in site.my_trends %}
     <span>{{ my_trends.content | strip_html | truncate:140}}</span>
     {% endfor %}
-    <a href="trend.html">更多动态...</a></p>
+    <a href="{{ my_trends.path }}">更多动态...</a></p>
 </div>
 
 <div>
