--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ description: 伯伦大人 | GreatBaron
 
 <div class="blurb">
     <h1>Lorem ipsum dolor sit amet</h1>
+    <span class="subheading">{{ page.description }}</span>
     <p>consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis 
     parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat
     massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
@@ -17,9 +18,9 @@ description: 伯伦大人 | GreatBaron
 <div class="trend-shortcut">
     <p>Latest Trend:</p>
     {% for my_trends in site.my_trends %}
-    <span>{{ my_trends.content | strip_html | truncate:140}}</span>
+    <span>{{ my_trends.content | strip_html | truncate:200}}</span>
     {% endfor %}
-    <a href="{{ my_trends.path }}">更多动态...</a></p>
+    <a href="{{ my_trends.directory }}">更多动态</a></p>
 </div>
 
 <div>
