--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: INDEX
-description: 伯伦大人 | GreatBaron
+description: 伯伦大人  GreatBaron
 ---
 
 <div class="blurb">
@@ -18,9 +18,9 @@ description: 伯伦大人 | GreatBaron
 <div class="trend-shortcut">
     <p>Latest Trend:</p>
     {% for my_trends in site.my_trends %}
-    <span>{{ my_trends.content | strip_html | truncate:200}}</span>
+    <span>{{ my_trends.content | strip_html | truncate:300}}</span>
     {% endfor %}
-    <a href="{{ my_trends.directory }}">更多动态</a></p>
+    <a href="{{ site.url }}/my_trends/trend.html">更多动态</a></p>
 </div>
 
 <div>
