--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ description: 伯伦大人  GreatBaron
     {% for my_trends in site.my_trends %}
     <span>{{ my_trends.content | strip_html | truncate:300}}</span>
     {% endfor %}
-    <a href="{{ site.url }}/my_trends/trend.html">更多动态</a></p>
+    <a href="/trend.html" >更多动态</a></p>
 </div>
 
 <div>
