--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@ description: Powered by GitHub
     <a href="/about">Read more about my life...</a></p>
 </div>
 
+<h2>Latest Trend:</h2>
 <div class="trend-shortcut">
-    <h2>Latest Trend:</h2>
     {% for my_trends in site.my_trends %}
-    <span class="trend-shortcut" >{{ my_trends.content | strip_html | truncate:300}}</span>
+    <span>{{ my_trends.content | strip_html | truncate:300}}</span>
     {% endfor %}
     <a href="/trend.html" >更多动态</a></p>
 </div>
