--- a/tools/index.html
+++ b/tools/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Tools
 description: Emas non quod opus est, sed quod necesse est.——M.P.Cato
-permalink:  /tools
+permalink:  /tools.html
 ---
 
 
