--- a/tools/litool/litools.html
+++ b/tools/litool/litools.html
@@ -14,6 +14,10 @@ permalink: /litools.html
     <title></title>
 
     <style>
+        body {
+            text-align: center;
+        }
+        
         .screen {
             border-radius: 25px;
             background: #666666;
