--- a/tools/litool/litools.html
+++ b/tools/litool/litools.html
@@ -3,7 +3,7 @@ title: 概率学小工具
 subtitle: Dice,Coin and else
 description: 谋事在人，成事在天。
 layout: nonav
-permalink: /litools.html
+permalink: /litools
 ---
 
 <!DOCTYPE html>
@@ -14,10 +14,7 @@ permalink: /litools.html
     <title></title>
 
     <style>
-        body {
-            text-align: center;
-        }
-        
+      
         .screen {
             border-radius: 25px;
             background: #666666;
@@ -25,7 +22,7 @@ permalink: /litools.html
             width: 33%;
             color: #ffffff;
             text-align: center;
-            font-family: Consolas, Courier, monospace;
+            font-family: 'Consolas', 'Courier', monospace;
             font-size: xx-large;
             position: relative;
             left: 25%;
@@ -33,7 +30,7 @@ permalink: /litools.html
 
         .litool {
             width: 250px;
-            background-color: white;
+            background-color: #ffffff;
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
             margin-bottom: 25px;
             text-align: center;
@@ -47,13 +44,13 @@ permalink: /litools.html
             /*极端自由主义*/
             background-color: #000099;
             color: #ffffff;
-            font-family: Consolas, Courier, monospace;
+            font-family: 'Consolas', 'Courier', monospace;
         }
         .polD2 {
             /*偏向自由主义*/
             background-color: #33ccff;
             color: #ffffff;
-            font-family: Consolas, Courier, monospace;
+            font-family: 'Consolas', 'Courier', monospace;
         }
         .polD3 {
             /*中庸主义*/
@@ -65,20 +62,20 @@ permalink: /litools.html
             /*偏向进步主义*/
             background-color: #ff9999;
             color: #ffffff;
-            font-family: Consolas, Courier, monospace;
+            font-family: 'Consolas', 'Courier', monospace;
         }
         .polD5 {
             /*极端进步主义*/
             background-color: #cc0000;
             color: #ffffff;
-            font-family: Consolas, Courier, monospace;
+            font-family: 'Consolas', 'Courier', monospace;
         }
 
         /*按钮*/
         .mybut {
             background-color: #4CAF50; /* Green */
             border: none;
-            color: white;
+            color: #ffffff;
             padding: 16px 32px;
             text-align: center;
             text-decoration: none;
@@ -126,7 +123,7 @@ permalink: /litools.html
 </head>
 
 
-<body>
+<body style="text-align: center;">
 
     <!-- 计数器 -->
     <div class="litool">
