--- a/tools/litool/litools.html
+++ b/tools/litool/litools.html
@@ -56,7 +56,7 @@ permalink: /litools
             /*中庸主义*/
             background-color: #999999;
             color: #ffffff;
-            font-family: Consolas, Courier, monospace;
+            font-family: 'Consolas', 'Courier', monospace;
         }
         .polD4 {
             /*偏向进步主义*/
@@ -160,7 +160,7 @@ permalink: /litools
         <h3>硬币</h3>
         <p id="coin">？</p>
         <button onclick="getCoin()" class="mybut butgreen">GET</button>
-        <audio id="coinSound" style="display:none;"><source src="ReceiveGold.wav" type="audio/wav"/></audio>
+        <audio id="coinSound" style="display:none;"><source src="{{ site.url }}/tools/litools/ReceiveGold.wav" type="audio/wav"/></audio>
     </div>
 
     <div class="litool">
