--- a/tools/litool/litools.html
+++ b/tools/litool/litools.html
@@ -125,6 +125,7 @@ permalink: /litools
 
 <body style="text-align: center;">
 
+    <h2>{{ page.title }}</h2>
     <!-- 计数器 -->
     <div class="litool">
         <hr />
