--- a/tools/litool/litools.html
+++ b/tools/litool/litools.html
@@ -34,6 +34,8 @@ permalink: /litools
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
             margin-bottom: 25px;
             text-align: center;
+            position: relative;
+            left: 25%;
         }
 
         .politic {
