--- a/tools/litool/litools.html
+++ b/tools/litool/litools.html
@@ -35,7 +35,7 @@ permalink: /litools
             margin-bottom: 25px;
             text-align: center;
             position: relative;
-            left: 25%;
+            left: 50%;
         }
 
         .politic {
@@ -240,7 +240,7 @@ permalink: /litools
                 alert("====HEAD====");
             };
             sound.play();
-            document.getElementById("coin").innerHTML = "<img src='coink100-" + COIN + ".png'>";
+            document.getElementById("coin").innerHTML = "<img src='https://AndrewImalion.github.io/tools/litools/coink100-" + COIN + ".png'>";
         }//硬币
 
         //10个政治光谱
