--- a/tools/litool/litools.html
+++ b/tools/litool/litools.html
@@ -240,7 +240,7 @@ permalink: /litools
                 alert("====HEAD====");
             };
             sound.play();
-            document.getElementById("coin").innerHTML = "<img src='coink100-" + COIN + ".png'>";
+            document.getElementById("coin").innerHTML = "<img src='{{ site.url }}/tools/litool/coink100-" + COIN + ".png'>";
         }//硬币
 
         //10个政治光谱
