--- a/tools/litool/litools.html
+++ b/tools/litool/litools.html
@@ -128,6 +128,9 @@ permalink: /litools
 <body style="text-align: center;">
 
     <h2>{{ page.title }}</h2>
+    <h3>{{ page.subtilte}}</h3>
+    <span>{{ page.description}}</span>
+    <hr/>
     <!-- 计数器 -->
     <div class="litool">
         <hr />
