--- a/tools/index.html
+++ b/tools/index.html
@@ -9,7 +9,7 @@ description: Emas non quod opus est, sed quod necesse est.——M.P.Cato
 <h1>网页工具</h1>		
 	
 <ul>
-	<li><a href="{{ site.url }}/litools><img src="/litool/coink100-0.png">概率学小工具(骰子、硬币和随机数)</a></li>
+	<li><a href="{{ site.url }}/litools"><img src="/litool/coink100-0.png">概率学小工具(骰子、硬币和随机数)</a></li>
 	<li><a href="{{ site.url }}/LatinVerb.html"><img src="mini-books_64px.png">拉丁语规则动词变位</a></li>				
 </ul>	
 </div>
