--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <style>
     body {
             width: 100%;
-            height: auto;
+            height: 760px;
             background-image: url("{{ site.url }}/img/for404.jpg");
             background-repeat: no-repeat;
             text-align:center;
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-    <div style="margin:10%;">
+    <div style="margin:10% 0 0 0;">
         <span>你来到了一个奇怪的地方</span>
         <h1>404</h1>
         <div>
