--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@ layout: nonva
         <div>
             <h5>你只可到此处，不能复前行</h5>
             <span style="font-style:italic;">——《约伯记 38：11》</span>
-            <p><a href="#">返回主页</a></p>
+            <p><a href="/">返回主页</a></p>
         </div>
     </div>
 
