--- a/404.html
+++ b/404.html
@@ -1,7 +1,3 @@
----
-layout: nonav
----
-
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -17,6 +13,11 @@ layout: nonav
             text-align:center;
 
         }
+        
+    footer{
+        position:absolute;
+            bottom: 0px;
+    }
     </style>
 </head>
 <body>
