--- a/404.html
+++ b/404.html
@@ -1,3 +1,8 @@
+---
+layout: nonav
+---
+
+
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -14,10 +19,6 @@
 
         }
         
-    footer{
-        position:absolute;
-            bottom: 0px;
-    }
     </style>
 </head>
 <body>
@@ -32,13 +33,6 @@
         </div>
     </div>
 
-    <footer>
-        <div class="copyrightlines" style="text-align: center;background-color:#ffffff; color:slategrey;font-family:'Times New Roman', Times, serif;margin:100px 0px 0px 0px;">©GreatBaron,2019,All Rights Reserved.</div><br />
-        <ul style="text-align: center;">
-            <li><a href=#><img src="{{ site.url }}/img/minicon-email_16px.png">email</a></li>
-            <li><a href="https://github.com/AndrewImalion"><img src="{{ site.url }}/img/minicon-GitHub_16px.png">GitHub</a></li>
-        </ul>
-    </footer>
 
 </body>
 </html>
