--- a/404.html
+++ b/404.html
@@ -11,12 +11,16 @@ layout: nonav
 
     <style>
     body {
-            width: 100%;
-            height: 760px;
+            max-width: 100%;
+            height: auto;
             background-image: url("{{ site.url }}/img/for404.jpg");
             background-repeat: no-repeat;
             text-align:center;
 
+        }
+        
+    h1 {
+            font-size: xx-large;
         }
         
     </style>
